2014-08-26  Shinpei Nakata  <shinpei.nakata@gmail.com>

	* main.go: release version 0.1.4

2014-08-24  Shinpei Nakata  <shinpei.nakata@gmail.com>
	* Refact serverside with Golang
	* add remove command

2014-07-08  Shinpei Nakata  <shinpei.nakata@gmail.com>
	* Release v0.1.3 (Jul, 8th, '14)
	* storage/file.go: summerize commands
	* engine/engine.go: mail display has imp

2014-06-24  Shinpei Nakata  <shinpei.nakata@gmail.com>
	* Released v0.1.2(Jun, 24th, '14)
	* added dist.sh
	* seperate version.go
	* added command.go
	* added session checker

2014-05-30  Shinpei Nakata  <shinpei.nakata@gmail.com>

	* Released v0.1.1 (Mar 30th, '14)
	* more stable behavior
	* 'status' implemented

2014-05-29  Shinpei Nakata  <shinpei.nakata@gmail.com>

	* Released v0.1.0 (Mar 29th, '14)
